syntax = "proto3";
option csharp_namespace = "RM.Proto";

import "google/protobuf/empty.proto";

package rm;

service SystemService {
  rpc GetInfo (google.protobuf.Empty) returns (SystemInfo);
  rpc Ping (PingRequest) returns (PingReply);
  rpc Uptime (google.protobuf.Empty) returns (UptimeReply);
}

message PingRequest { int64 ts = 1; }
message PingReply   { int64 ts = 1; int64 echo_ts = 2; }

message SystemInfo {
  string os = 1;
  string arch = 2;
  string version = 3;
  string device_id = 4;
  repeated string caps = 5;
}

message UptimeReply { int64 seconds = 1; }
